--- a/index.html
+++ b/index.html
@@ -4,104 +4,113 @@
 <head>
     <meta charset="UTF-8">
     <title>Desafio</title>
-    <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" type="text/css" href="./assets/css/style.css">
 </head>
 
 <body>
-    <div class="contenedor">
-        <div class="menu">
-            <div class="logo">Diario</div>
-            <div class="nav">
-                <ul>
-                    <li><a href="">Nosotros</a></li>
-                    <li><a href="">Contacto</a></li>
-                    <li><input class="input-menu" type="text" name="buscar" placeholder="buscar..." /></li>
-                </ul>
-            </div>
-        </div>
-        <div class="contenido">
-            <div class="listad-noticias">
-                <div class="noticia">
-                    <div class="cabecera">
+
+    <div class="g-container">
+            <nav class="g-nav menu">
+                <div class="menu__logo">Diario</div>
+                <div class="menu__nav">
+                    <ul class="mini-menu">
+                        <li><a href="">Nosotros</a></li>
+                        <li><a href="">Contacto</a></li>
+                        <li class="mini-menu__search"><input type="text" name="buscar" placeholder="buscar..." /></li>
+                    </ul>
+                </div>
+            </nav>
+
+            <section class="g-section-news">
+
+                <div class="news-card">
+                    <div class="news-card__header">
                         <h2>
                             Lorem ipsum dolor sit amet,
                         </h2>
                     </div>
-                    <div class="cuerpo">
-                        <img src="https://picsum.photos/200/300?random=1" />
+                    <div class="news-card__body">
+                        <img class="news-card__img" src="https://picsum.photos/200/300?random=1" />
                         <p>
                             Lorem ipsum dolor sit amet, consectetur adipisicing elit.
                         </p>
                     </div>
                 </div>
-                <div class="noticia">
-                    <div class="cabecera">
+
+                <div class="news-card">
+                    <div class="news-card__header">
                         <h2>
                             Lorem ipsum dolor sit amet,
                         </h2>
                     </div>
-                    <div class="cuerpo">
-                        <img src="https://picsum.photos/200/300?random=2" />
+                    <div class="news-card__body">
+                        <img class="news-card__img" src="https://picsum.photos/200/300?random=2" />
                         <p>
                             Lorem ipsum dolor sit amet, consectetur adipisicing elit.
                         </p>
                     </div>
                 </div>
-                <div class="noticia">
-                    <div class="cabecera">
+
+                <div class="news-card">
+                    <div class="news-card__header">
                         <h2>
                             Lorem ipsum dolor sit amet,
                         </h2>
                     </div>
-                    <div class="cuerpo">
-                        <img src="https://picsum.photos/200/300?random=3" />
+                    <div class="news-card__body">
+                        <img class="news-card__img" src="https://picsum.photos/200/300?random=3" />
                         <p>
                             Lorem ipsum dolor sit amet, consectetur adipisicing elit.
                         </p>
                     </div>
                 </div>
-                <div class="noticia">
-                    <div class="cabecera">
+
+                <div class="news-card">
+                    <div class="news-card__header">
                         <h2>
                             Lorem ipsum dolor sit amet,
                         </h2>
                     </div>
-                    <div class="cuerpo">
-                        <img src="https://picsum.photos/200/300?random=4" />
+                    <div class="news-card__body">
+                        <img class="news-card__img" src="https://picsum.photos/200/300?random=4" />
                         <p>
                             Lorem ipsum dolor sit amet, consectetur adipisicing elit.
                         </p>
                     </div>
                 </div>
-                <div class="noticia">
-                    <div class="cabecera">
+
+                <div class="news-card">
+                    <div class="news-card__header">
                         <h2>
                             Lorem ipsum dolor sit amet,
                         </h2>
                     </div>
-                    <div class="cuerpo">
-                        <img src="https://picsum.photos/200/300?random=5" />
+                    <div class="news-card__body">
+                        <img class="news-card__img" src="https://picsum.photos/200/300?random=5" />
                         <p>
                             Lorem ipsum dolor sit amet, consectetur adipisicing elit.
                         </p>
                     </div>
                 </div>
-                <div class="noticia">
-                    <div class="cabecera">
+
+                <div class="news-card">
+                    <div class="news-card__header">
                         <h2>
                             Lorem ipsum dolor sit amet,
                         </h2>
                     </div>
-                    <div class="cuerpo">
-                        <img src="https://picsum.photos/200/300?random=6" />
+                    <div class="news-card__body">
+                        <img class="news-card__img" src="https://picsum.photos/200/300?random=6" />
                         <p>
                             Lorem ipsum dolor sit amet, consectetur adipisicing elit.
                         </p>
                     </div>
                 </div>
-            </div>
-            <div class="listado-izquierdo">
-                <div class="cabecera-listado">
+ 
+            </section>
+
+            <aside class="g-aside">
+                <div class="aside__list">
                     <h1>Nosotros </h1>
                     <p>
                         Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
@@ -109,7 +118,7 @@
                         quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
                     </p>
                 </div>
-                <div class="tags">
+                <div class="aside__tags">
                     <h1>Tags </h1>
                     <ul>
                         <li>Viajes</li>
@@ -117,33 +126,34 @@
                         <li>Comida</li>
                     </ul>
                 </div>
-                <div class="noticias-destacadas">
+                <div class="aside__higlight">
                     <h1>Destacados </h1>
-                    <div class="item">
+                    <div class="aside__higlight__card">
                         <h4>Lorem ipsum dolor sit amet.</h4>
                         <img src="https://picsum.photos/200/200?random=7" />
                     </div>
-                    <div class="item">
+                    <div class="aside__higlight__card">
                         <h4>Lorem ipsum dolor sit amet.</h4>
                         <img src="https://picsum.photos/200/200?random=8" />
                     </div>
-                    <div class="item">
+                    <div class="aside__higlight__card">
                         <h4>Lorem ipsum dolor sit amet.</h4>
                         <img src="https://picsum.photos/200/200?random=9" />
                     </div>
                 </div>
-            </div>
-        </div>
-        <div class="newsletter">
-            <h2>Lorem ipsum dolor sit amet</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod</p>
-            <div class="group">
-                <input type="text" name=""><button>Suscríbete</button>
-            </div>
-        </div>
-        <div class="footer">
-            <p>Todos los derechos reservados</p>
-        </div>
+            </aside>
+
+            <section class="g-section-newsletter">
+                <h2>Lorem ipsum dolor sit amet</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod</p>
+                <div class="newsletter__mailing">
+                    <input type="text" name=""><button>Suscríbete</button>
+                </div>
+            </section>
+
+            <footer class="g-footer">
+                <p>Todos los derechos reservados</p>
+            </footer>
     </div>
 </body>
 
