adding css styling

--- a/index.html
+++ b/index.html
@@ -3,9 +3,13 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Desafio</title>
+    <title>Revista Online</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="./assets/css/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@400;700&display=swap" rel="stylesheet">
+
 </head>
 
 <body>
@@ -148,7 +152,8 @@
                 <h2>Lorem ipsum dolor sit amet</h2>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod</p>
                 <div class="newsletter__mailing">
-                    <input type="text" name=""><button>Suscríbete</button>
+                    <input type="text" name="">
+                    <button>Suscríbete</button>
                 </div>
             </section>
 
